humming bird project upd

--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: verdana ;
-} 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
  body {
-     background: url(/img/bird.png);
-     background-size: cover;
-     height: 100vh;
+     background: url(/img/bird.png) no-repeat center center fixed;
+     background-size:cover;
+     height: 90vh;
+     display: flex;
  }
 
  .container {
-     backdrop-filter: blur(4px);
+     backdrop-filter: blur(1px);
      background-color: rgb(255, 255, 255, 0.615);
      height: 100%;
      width: 100%;
+     padding: 2%;
  }
 
  .navbar {
@@ -35,4 +37,44 @@
  .navbar a{
     text-decoration: none;
     color: black;
+    font-weight: bold;
+    transition: 0.5s;
+ }
+ .navbar a:hover {
+  color:rgb(158, 84, 175)
+
+ }
+.actions{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+   }
+
+ .action-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+ }
+
+ .action-button.login {
+    background-color:#C87EBC ;
+ }
+ .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 70vh;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+
+ }
+ .title {
+    text-transform: uppercase;
+    color: #5C2E7E;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 2px;
+    font-size: 50px;
  }
