--- a/css/main.css
+++ b/css/main.css
@@ -78,3 +78,11 @@
     letter-spacing: 2px;
     font-size: 50px;
  }
+ .sub-title {
+    font-size: 1.2rem;
+    color: #444444;
+ }
+ .cta-btns {
+    display: flex;
+    justify-content: center;
+ }
